--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "dependencies": {
     "include-all": "^4.0.3"
+  },
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/lcavero/sails-hook-forms"
   }
 }
